@@ -241,5 +241,8 @@
     "processor": {
         "event": "error",
         "name": "error"
+    },
+    "transaction": {
+        "id": "945254c5-67a5-417e-8a4e-aa29efcbfb79"
     }
 }
