@@ -14,12 +14,15 @@ import (
 )
 
 type Event struct {
-	Id        *string
-	Culprit   *string
-	Context   common.MapStr
-	Exception *Exception
-	Log       *Log
-	Timestamp time.Time
+	Id          *string
+	Culprit     *string
+	Context     common.MapStr
+	Exception   *Exception
+	Log         *Log
+	Timestamp   time.Time
+	Transaction *struct {
+		Id string
+	}
 
 	enhancer utility.MapStrEnhancer
 	data     common.MapStr
@@ -48,16 +51,22 @@ func (e *Event) DocType() string {
 }
 
 func (e *Event) Mappings(pa *payload) (time.Time, []m.DocMapping) {
-	return e.Timestamp,
-		[]m.DocMapping{
-			{Key: "processor", Apply: func() common.MapStr {
-				return common.MapStr{"name": processorName, "event": e.DocType()}
-			}},
-			{Key: e.DocType(), Apply: e.Transform},
-			{Key: "context", Apply: func() common.MapStr { return e.Context }},
-			{Key: "context.service", Apply: pa.Service.Transform},
-			{Key: "context.system", Apply: pa.System.Transform},
-		}
+	mapping := []m.DocMapping{
+		{Key: "processor", Apply: func() common.MapStr {
+			return common.MapStr{"name": processorName, "event": e.DocType()}
+		}},
+		{Key: e.DocType(), Apply: e.Transform},
+		{Key: "context", Apply: func() common.MapStr { return e.Context }},
+		{Key: "context.service", Apply: pa.Service.Transform},
+		{Key: "context.system", Apply: pa.System.Transform},
+	}
+	if e.Transaction != nil {
+		mapping = append(mapping, m.DocMapping{
+			Key:   "transaction",
+			Apply: func() common.MapStr { return common.MapStr{"id": e.Transaction.Id} },
+		})
+	}
+	return e.Timestamp, mapping
 }
 
 func (e *Event) Transform() common.MapStr {
