@@ -48,10 +48,11 @@ func TestPayloadTransform(t *testing.T) {
 			Payload: payload{
 				Service: svc,
 				Events: []Event{{
-					Timestamp: timestamp,
-					Context:   common.MapStr{"foo": "bar", "user": common.MapStr{"email": "m@m.com"}},
-					Exception: baseException(),
-					Log:       baseLog(),
+					Timestamp:   timestamp,
+					Context:     common.MapStr{"foo": "bar", "user": common.MapStr{"email": "m@m.com"}},
+					Exception:   baseException(),
+					Log:         baseLog(),
+					Transaction: &struct{ Id string }{Id: "945254c5-67a5-417e-8a4e-aa29efcbfb79"},
 				}},
 			},
 			Output: []common.MapStr{
@@ -68,7 +69,8 @@ func TestPayloadTransform(t *testing.T) {
 						"exception":    common.MapStr{"message": "exception message"},
 						"log":          common.MapStr{"message": "error log message"},
 					},
-					"processor": common.MapStr{"event": "error", "name": "error"},
+					"processor":   common.MapStr{"event": "error", "name": "error"},
+					"transaction": common.MapStr{"id": "945254c5-67a5-417e-8a4e-aa29efcbfb79"},
 				},
 			},
 			Msg: "Payload with Event with Context.",
